--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
-Package: ARKAS
-Title: Ascertaining Relevant lncRNAs from Kallisto Applying ScRNA-seq
+Package: ELATUS
+Title: Elucidating biologically relevant lncRNA annotated transcripts previously undetected using scRNA-seq
 Version: 1.0.0
 Authors@R: person("Enrique", "Goni", email = "egonie@unav.es", role = c("aut", "cre"))
 Description: A computational workflow for uncovering functionally relevant lncRNAs from scRNA-seq data preprocessed by Kallisto.
