--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(ELATUS)
 export(Filtering)
 export(SI)
 export(biologically_relevant_lncRNAs)
+export(crispr_info)
 export(emptydrops_filt)
 export(get_candidates)
 export(import_CellRanger_sc)
