--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,12 +2,14 @@
 
 export(ELATUS)
 export(ELATUS_filtered)
+export(ELATUS_premRNA)
 export(Filtering)
 export(SI)
 export(biologically_relevant_lncRNAs)
 export(crispr_info)
 export(emptydrops_filt)
 export(get_candidates)
+export(get_candidates_premRNA)
 export(import_CellRanger_sc)
 export(import_kallisto_sc)
 export(qc_metrics)
